Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm
@@ -3464,6 +3464,98 @@ TEST(ProcessSwap, ClosePageAfterCrossSiteProvisionalLoad)
     TestWebKitAPI::Util::sleep(0.5);
 }
 
+static Vector<bool> loadingStateChanges;
+static unsigned urlChangeCount;
+
+@interface PSONLoadingObserver : NSObject
+@end
+
+@implementation PSONLoadingObserver
+
+-(void)observeValueForKeyPath:(NSString *)keyPath ofObject:(id)object change:(NSDictionary *)change context:(void *)context
+{
+    WKWebView *webView = (WKWebView *)context;
+
+    if ([keyPath isEqualToString:@"loading"])
+        loadingStateChanges.append([webView isLoading]);
+    else if ([keyPath isEqualToString:@"URL"])
+        ++urlChangeCount;
+
+    EXPECT_WK_STREQ(@"pson://www.apple.com/main.html", [[webView URL] absoluteString]);
+}
+
+@end
+
+TEST(ProcessSwap, LoadingStateAfterPolicyDecision)
+{
+    auto processPoolConfiguration = adoptNS([[_WKProcessPoolConfiguration alloc] init]);
+    processPoolConfiguration.get().processSwapsOnNavigation = YES;
+    auto processPool = adoptNS([[WKProcessPool alloc] _initWithConfiguration:processPoolConfiguration.get()]);
+
+    auto webViewConfiguration = adoptNS([[WKWebViewConfiguration alloc] init]);
+    [webViewConfiguration setProcessPool:processPool.get()];
+    auto handler = adoptNS([[PSONScheme alloc] init]);
+    [webViewConfiguration setURLSchemeHandler:handler.get() forURLScheme:@"PSON"];
+
+    auto webView = adoptNS([[WKWebView alloc] initWithFrame:NSMakeRect(0, 0, 800, 600) configuration:webViewConfiguration.get()]);
+    auto navigationDelegate = adoptNS([[PSONNavigationDelegate alloc] init]);
+    [webView setNavigationDelegate:navigationDelegate.get()];
+
+    [webView configuration].preferences.safeBrowsingEnabled = NO;
+
+    [webView loadRequest:[NSURLRequest requestWithURL:[NSURL URLWithString:@"pson://www.webkit.org/main.html"]]];
+    TestWebKitAPI::Util::run(&done);
+    done = false;
+
+    auto loadObserver = adoptNS([[PSONLoadingObserver alloc] init]);
+    [webView addObserver:loadObserver.get() forKeyPath:@"loading" options:0 context:webView.get()];
+    [webView addObserver:loadObserver.get() forKeyPath:@"URL" options:0 context:webView.get()];
+
+    urlChangeCount = 0;
+    didStartProvisionalLoad = false;
+    [webView loadRequest:[NSURLRequest requestWithURL:[NSURL URLWithString:@"pson://www.apple.com/main.html"]]];
+    EXPECT_WK_STREQ(@"pson://www.apple.com/main.html", [[webView URL] absoluteString]);
+    EXPECT_TRUE([webView isLoading]);
+
+    EXPECT_EQ(1U, loadingStateChanges.size());
+    EXPECT_TRUE(loadingStateChanges[0]);
+    EXPECT_EQ(1U, urlChangeCount);
+
+    navigationDelegate->decidePolicyForNavigationAction = ^(WKNavigationAction *, void (^decisionHandler)(WKNavigationActionPolicy)) {
+        EXPECT_WK_STREQ(@"pson://www.apple.com/main.html", [[webView URL] absoluteString]);
+        EXPECT_TRUE([webView isLoading]);
+
+        decisionHandler(WKNavigationActionPolicyAllow);
+
+        EXPECT_WK_STREQ(@"pson://www.apple.com/main.html", [[webView URL] absoluteString]);
+        EXPECT_TRUE([webView isLoading]);
+    };
+
+    EXPECT_EQ(1U, loadingStateChanges.size());
+
+    TestWebKitAPI::Util::run(&didStartProvisionalLoad);
+    didStartProvisionalLoad = false;
+
+    EXPECT_EQ(1U, loadingStateChanges.size());
+    EXPECT_EQ(1U, urlChangeCount);
+
+    EXPECT_WK_STREQ(@"pson://www.apple.com/main.html", [[webView URL] absoluteString]);
+    EXPECT_TRUE([webView isLoading]);
+
+    TestWebKitAPI::Util::run(&done);
+    done = false;
+
+    EXPECT_WK_STREQ(@"pson://www.apple.com/main.html", [[webView URL] absoluteString]);
+    EXPECT_FALSE([webView isLoading]);
+
+    EXPECT_EQ(2U, loadingStateChanges.size());
+    EXPECT_FALSE(loadingStateChanges[1]);
+    EXPECT_EQ(1U, urlChangeCount);
+
+    [webView removeObserver:loadObserver.get() forKeyPath:@"loading" context:webView.get()];
+    [webView removeObserver:loadObserver.get() forKeyPath:@"URL" context:webView.get()];
+}
+
 #if PLATFORM(MAC)
 
 static const char* saveOpenerTestBytes = R"PSONRESOURCE(
